[gd_scene load_steps=2 format=3 uid="uid://bncnlm1ba47b3"]

[ext_resource type="Script" path="res://menu.gd" id="1_hsv0b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hsv0b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 525.0
offset_top = 304.0
offset_right = 609.0
offset_bottom = 405.0

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "play"

[node name="DeckButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "your deck"

[node name="ShopButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "shop"

[node name="optionbutton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "option"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "exit game"

[node name="Logout" type="Button" parent="."]
layout_mode = 2
offset_left = 1057.0
offset_top = 12.0
offset_right = 1141.0
offset_bottom = 43.0
text = "logout"

[node name="Options" type="PopupPanel" parent="."]
position = Vector2i(476, 224)
size = Vector2i(200, 200)
visible = true

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 196.0

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Change Language" type="Button" parent="Options"]
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 196.0

[node name="How To Play" type="Button" parent="Options"]
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 196.0

[node name="HowToPlay" type="PopupPanel" parent="."]
size = Vector2i(300, 300)

[node name="playername" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 4.0
offset_right = 154.0
offset_bottom = 75.0
placeholder_text = "เปลี่ยนชื่อกดenter"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/DeckButton" to="." method="_on_deck_button_pressed"]
[connection signal="pressed" from="VBoxContainer/optionbutton" to="." method="_on_optionbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Logout" to="." method="_on_logout_button_pressed"]
[connection signal="text_submitted" from="playername" to="." method="_on_playername_text_submitted"]
